# GoIT_H7_sqlalchemy_alembic

./: Dockerfile  README.md  alembic.ini  cli_crud.py  crud.py  db_session.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: 24bc4e64135e_init.py
