[tool.poetry]
name = "goit-h7-sqlalchemy-alembic"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
faker = "^23.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
